--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-anime": "^4.1.1",
     "react-dom": "^18",
     "react-move": "^6.5.0",
-    "react-typing-animation": "^1.6.2"
+    "react-typing-animation": "^1.6.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +29,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-no-scrollbar": "^1.0.1",
     "typescript": "^5"
   }
 }
